--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
 </head>
   <body class="bg-gray-950 text-white h-screen overflow-hidden">
     <div id="root" class="h-full"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
